# alchem

./: .env  .gitignore  .gitmodules  Cargo.toml  PULSAR.md  README.md  client.py  docker-compose-pulsar.yml  docker-compose-redus.yml  docker-compose.yml
assets/: index.html  script.js
crates/bors/: Cargo.toml
crates/schema/: Cargo.toml
crates/schema/src/: lib.rs  schema.rs
crates/schema/src/repo/: mod.rs  room.rs  user.rs
crates/schema/src/repository/: user.rs
crates/schema/src/source/: local_user.rs  mod.rs  room.rs  room_user.rs  user.rs
crates/todos/: Cargo.toml
crates/utils/: Cargo.toml
crates/utils/src/: apub.rs  claims.rs  config.rs  db.rs  lib.rs  pool.rs  validate.rs
crates/utils/src/rate_limit/: mod.rs
crates/utils/src/settings/: mod.rs  structs.rs
crates/websocket/: Cargo.toml
crates/websocket/proto/: chat_message.proto
crates/websocket/src/: build.rs  lib.rs  server.rs  session.rs
crates/websocket/src/handlers/: room.rs  ws.rs
keys/: private.pem  public.pem
migrations/2022-04-11-073140_rooms/: down.sql  up.sql
src/: main.rs  server.rs  ws.rs
src/handlers/: mod.rs  remind.rs  room.rs  todo.rs  user.rs  wsm.rs
test/: client.py  debezium-postgres-source-config.yaml  usernames.txt
test/locust/: locustfile.py
test/locust/common/: auth.py
test/locust/locustfiles/: registusers.py  websocket.py
