[package]
name = "alchem-schema"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alw-utils = { version = "0.1", path = "../utils" }
chrono = { version = "0.4", features = ["serde"] }
diesel = {version = "2",  default-features = false, features = ["chrono", "postgres", "serde_json"]}
diesel-async = {version = "0.1", default-features = false, features = ["postgres"]}
futures = "0.3"
serde = { version = "1", features = ["derive"] }
# tokio = { version = "1", features = ["full"] }
# tracing = "0.1"
# tracing-subscriber = { version="0.3", features = ["env-filter"] }