[package]
name = "alchem-utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.5", features = ["ws", "headers"] }
http-body = "0.4.3"
chrono = { version = "0.4", features = ["serde"] }
data-encoding = "2"
diesel = {git = "https://github.com/weiznich/diesel", rev = "9b4179e01ee96bd585cf306f64359971ee9ece44", default-features = false, features = ["chrono", "postgres", "serde_json"]}
diesel-async = {git = "https://github.com/weiznich/diesel_async", default-features = false, features = ["postgres"]}
dotenvy="0.15"
envy = "0.4"
jwt-simple = "0.10"
futures = "0.3"
lazy_static = "1"
lettre = "0.10.0-rc.4"
openssl = "0.10"
percent-encoding = "2"
rand = "0.8"
redis = { version = "0.21", features = ["cluster"] }
ring = "0.17.0-alpha.11"
serde = { version = "1", features = ["derive"] }
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tracing = "0.1"
tracing-subscriber = { version="0.3", features = ["env-filter"] }
validator = { version = "0.14.0", features = ["derive","phone"] }