[package]
name = "alw-utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.5", features = ["ws", "headers"] }
http-body = "0.4.5"
chrono = { version = "0.4", features = ["serde"] }
data-encoding = "2"
diesel = {version = "2",  default-features = false, features = ["chrono", "postgres", "serde_json"]}
diesel-async = {version = "0.1", default-features = false, features = ["postgres"]}
dotenvy="0.15"
envy = "0.4"
jwt-simple = "0.11"
futures = "0.3"
lazy_static = "1"
lettre = "0.10.1"
openssl = "0.10"
percent-encoding = "2"
rand = "0.8"
redis = "0.22" 
ring = "0.17.0-alpha.11"
serde = { version = "1", features = ["derive"] }
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tracing = "0.1"
tracing-subscriber = { version="0.3", features = ["env-filter"] }
validator = { version = "0.16", features = ["derive","phone"] }