[package]
name = "alchem-websocket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alchem-utils = { version = "0.1.0",path = "../utils"}

axum = { version = "0.5", features = ["ws", "headers"] }
futures = "0.3"
pulsar = "4"
redis = { version = "0.21", features = ["cluster"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
# tonic = "0.7"
# prost = "0.10"

# [build-dependencies]
# tonic-build = { version="0.7", features = ["prost", "compression"] }
