[package]
name = "alchem-websocket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alchem-utils = { version = "0.1.0",path = "../utils"}

axum = { version = "0.5", features = ["ws", "headers"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
pulsar = "4"
redis = { version = "0.22", features = ["cluster"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
